Fixato "bug" dell'overflow nei pre
Così @ZubatZeta è contento

--- a/input/main.css
+++ b/input/main.css
@@ -3,9 +3,12 @@
 	box-sizing: border-box;
 }
 
-pre, code {
+pre {
+	padding: 0.5em !important;
 	font-family: monospace;
 	font-size: 0.9rem;
+	white-space: pre;
+	overflow: auto;
 }
 
 pre {
